--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "dev": "webpack serve --mode development",
-  "build": "webpack --mode production"
+    "dev": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/alpinejs": "^3.13.11",
     "@types/three": "^0.174.0",
     "autoprefixer": "^10.4.20",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
@@ -28,6 +30,7 @@
     "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
+    "alpinejs": "^3.14.8",
     "three": "^0.174.0"
   }
 }
