--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "typescript": "^5.8.2",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^5.2.0",
     "alpinejs": "^3.14.8",
     "three": "^0.174.0"
   }
