--- a/package.json
+++ b/package.json
@@ -13,22 +13,26 @@
   "devDependencies": {
     "@types/alpinejs": "^3.13.11",
     "@types/three": "^0.174.0",
+    "alpinejs": "^3.14.8",
     "autoprefixer": "^10.4.20",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.17",
+    "three": "^0.174.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.2",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0",
-    "alpinejs": "^3.14.8",
-    "three": "^0.174.0"
+    "webpack-dev-server": "^5.2.0"
+  },
+  "dependencies": {
+    "bootstrap-icons": "^1.11.3"
   }
 }
